# attested-tls-proxy

./: .dockerignore  .gitignore  :w  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html.1  shell.nix
.github/workflows/: test.yml
dummy-attestation-server/: Cargo.toml
dummy-attestation-server/src/: lib.rs  main.rs
scripts/: generate-cert.sh
src/: attestation.rs  attested_get.rs  file_server.rs  health_check.rs  lib.rs  main.rs  test_helpers.rs
src/attestation/: azure.rs  dcap.rs  measurements.rs  mod.rs  nv_index.rs
src/attestation/azure/: ak_certificate.rs  mod.rs  nv_index.rs
test-assets/: azure-tdx-1764620247665812984  azure-tdx-1764662251380464271  dcap-tdx-1766059550570652607  measurements.json  measurements_2.json
