[package]
name = "attested-tls-proxy"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.48.0", features = ["full"]}
tokio-rustls = "0.26.4"
sha2 = "0.10.9"
x509-parser = "0.18.0"
thiserror = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
webpki-roots = "1.0.4"
rustls-pemfile = "2.2.0"
anyhow = "1.0.100"
pem-rfc7468 = { version = "0.7.0", features = ["std"] }

[dev-dependencies]
rcgen = "0.14.5"
axum = "0.8.6"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-webpki-roots-no-provider"] }
