[package]
name = "attested-tls-proxy"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.48.0", features = ["full"]}
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"]}
sha2 = "0.10.9"
x509-parser = "0.18.0"
thiserror = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
webpki-roots = "1.0.4"
rustls-pemfile = "2.2.0"
anyhow = "1.0.100"
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
tdx-quote = { version = "0.0.4", features = ["mock"] }
configfs-tsm = "0.0.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
dcap-qvl = "0.3.4"
hex = "0.4.3"
hyper = { version = "1.7.0", features = ["server", "http2"] }
hyper-util = "0.1.17"
http-body-util = "0.1.3"
bytes = "1.10.1"
http = "1.3.1"
serde_json = "1.0.145"
serde = "1.0.228"

[dev-dependencies]
rcgen = "0.14.5"
axum = "0.8.6"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-webpki-roots-no-provider"] }
