[package]
name = "dummy-attestation-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
attested-tls-proxy = { path = ".." }
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.6"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"] }
thiserror = "2.0.17"
clap = { version = "4.5.51", features = ["derive", "env"] }
webpki-roots = "1.0.4"
rustls-pemfile = "2.2.0"
anyhow = "1.0.100"
configfs-tsm = "0.0.2"
hex = "0.4.3"
serde_json = "1.0.145"
serde = "1.0.228"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
rcgen = "0.14.5"
parity-scale-codec = "3.7.5"
reqwest = { version = "0.12.23", default-features = false }

[dev-dependencies]
